--- a/mickey game/mickey z.html
+++ b/mickey game/mickey z.html
@@ -2106,10 +2106,7 @@ Your head high above the neighborhood, you stare down at your easily 50-foot fra
 
 (after:time+1s)[.... .... ...
 
-(after:time+1s)[there it is again... like a knocking noise or a grumbling rolling type thing]]]</tw-passagedata><tw-passagedata pid="224" name="start" tags="start" position="1550,1075" size="100,100">{(group: &#39;playing&#39;, &#39;stop&#39;)
-}&lt;div class=&quot;responsive-three-columns&quot;&gt;
-&lt;div&gt;
-&lt;div class=&quot;central&quot; style=&quot;justify-content:right;&quot;&gt;&lt;img src=&quot;start/fran.gif&quot;&gt;(text-style: &quot;shudder&quot;)[(link-goto:&quot;squats&quot;,&quot;fran&quot;)&lt;span class=&quot;tooltiptext&quot;&gt;fran&lt;/span&gt;]&lt;tooltip|&lt;/div&gt;{
+(after:time+1s)[there it is again... like a knocking noise or a grumbling rolling type thing]]]</tw-passagedata><tw-passagedata pid="224" name="start" tags="start" position="1550,1075" size="100,100">(group: &#39;playing&#39;, &#39;stop&#39;)&lt;div class=&quot;responsive-three-columns&quot;&gt;&lt;div&gt;&lt;div class=&quot;central&quot; style=&quot;justify-content:right;&quot;&gt;&lt;img src=&quot;start/fran.gif&quot;&gt;(text-style: &quot;shudder&quot;)[(link-goto:&quot;squats&quot;,&quot;fran&quot;)&lt;span class=&quot;tooltiptext&quot;&gt;fran&lt;/span&gt;]&lt;tooltip|&lt;/div&gt;{
 
 }&lt;div class=&quot;central&quot; style=&quot;justify-content:right;&quot;&gt;&lt;img src=&quot;start/gal.gif&quot;&gt;|tooltip&gt;[(link-goto:&quot;Open your window&quot;,&quot;gal&quot;)&lt;span class=&quot;tooltiptext&quot;&gt;gal&lt;/span&gt;]&amp;emsp;&amp;emsp;&lt;/div&gt;{
 
@@ -2123,7 +2120,9 @@ Your head high above the neighborhood, you stare down at your easily 50-foot fra
 
 }&lt;div class=&quot;central&quot; style=&quot;justify-content:right;&quot;&gt;&lt;img src=&quot;start/mdf.gif&quot;&gt;|tooltip&gt;[(link-goto:&quot;go into the hatch&quot;,&quot;mdf&quot;)&lt;span class=&quot;tooltiptext&quot;&gt;mdf&lt;/span&gt;]&amp;emsp;&amp;emsp;&lt;/div&gt;{
 
-}&lt;div class=&quot;central&quot; style=&quot;justify-content:right;&quot;&gt;&lt;img src=&quot;start/kevin.gif&quot;&gt;|tooltip&gt;[(link-goto:&quot;think about if you are thirsty&quot;,&quot;kevin&quot;)&lt;span class=&quot;tooltiptext&quot;&gt;kevin&lt;/span&gt;]&lt;/div&gt;
+}&lt;div class=&quot;central&quot; style=&quot;justify-content:right;&quot;&gt;&lt;img src=&quot;start/kevin.gif&quot;&gt;|tooltip&gt;[(link-goto:&quot;think about if you are thirsty&quot;,&quot;kevin&quot;)&lt;span class=&quot;tooltiptext&quot;&gt;kevin&lt;/span&gt;]&lt;/div&gt;{
+
+}&lt;div class=&quot;central&quot; style=&quot;justify-content:right;&quot;&gt;&lt;img src=&quot;start/booby.gif&quot;&gt;|tooltip&gt;[(link-goto:&quot;!petbread&quot;,&quot;booby&quot;)&lt;span class=&quot;tooltiptext&quot;&gt;bob&lt;/span&gt;]&lt;/div&gt;
 &lt;/div&gt;
 &lt;div style=&quot;text-align:center;&quot;&gt;
 &lt;img src=&quot;start/mickey.gif&quot;&gt;
@@ -2148,9 +2147,7 @@ what will u do?
 
 }&lt;div class=&quot;central&quot; style=&quot;justify-content:center;&quot;&gt;|tooltip2&gt;[(link-goto:&quot;Take a nap&quot;,&quot;exe&quot;)&lt;span class=&quot;tooltiptext&quot;&gt;exe&lt;/span&gt;]&lt;img src=&quot;start/exe.gif&quot;&gt;&lt;/div&gt;{
 
-}&lt;div class=&quot;central&quot; style=&quot;justify-content:left;&quot;&gt;&amp;emsp;&amp;emsp;|tooltip2&gt;[(link-goto:&quot;Drum your fingers on the table&quot;,&quot;wedro&quot;)&lt;span class=&quot;tooltiptext&quot;&gt;wedro&lt;/span&gt;]&lt;img src=&quot;start/wedro.gif&quot;&gt;&lt;/div&gt;{
-
-}&lt;div class=&quot;central&quot; style=&quot;justify-content:left;&quot;&gt;|tooltip2&gt;[(link-goto:&quot;!petbread&quot;,&quot;booby&quot;)&lt;span class=&quot;tooltiptext&quot;&gt;bob&lt;/span&gt;]&lt;img src=&quot;start/booby.gif&quot;&gt;&lt;/div&gt;
+}&lt;div class=&quot;central&quot; style=&quot;justify-content:left;&quot;&gt;&amp;emsp;&amp;emsp;|tooltip2&gt;[(link-goto:&quot;Drum your fingers on the table&quot;,&quot;wedro&quot;)&lt;span class=&quot;tooltiptext&quot;&gt;wedro&lt;/span&gt;]&lt;img src=&quot;start/wedro.gif&quot;&gt;&lt;/div&gt;
 &lt;/div&gt;
 &lt;/div&gt;</tw-passagedata><tw-passagedata pid="225" name="still not big enough" tags="" position="4525,800" size="100,100">for real?
 
