--- a/mickeygame/mickeyz.html
+++ b/mickeygame/mickeyz.html
@@ -246,7 +246,7 @@ tw-story[tags~="kevin"] tw-link:hover{
   color:#d7e856;
 }
 
-b, strong {
+tw-story[tags~="kris"] b, strong {
   font-family:'Roobert+TWHINT+Bold', monospace;
 }
 
