--- a/readytowork/readytowork.html
+++ b/readytowork/readytowork.html
@@ -21,15 +21,45 @@
 		
 		const mapdata = [
 			{
+			"contractor": "A & S CEMENT CONTRACTORS INC",
+			"address": "530 South Olive Street, Los Angeles, ,",
+			"type": ["Commercial - Concrete"],
+			},
+			{
+			"contractor": "ABDELLATIF ENTERPRISES, INC.",
+			"address": "316 North Juanita Avenue, Los Angeles, ,",
+			"type": ["Framing Residential", " Wood Framing"],
+			},
+			{
 			"contractor": "ANNING - JOHNSON COMPANY",
 			"address": "3625 South Grand Avenue, Los Angeles, CA, 90007",
-			"type": ["Dry Fin Com", " Drywall", " Drywall Com", "Metal Stud/Framing"]
+			"type": ["Dry Fin Com", " Drywall", " Drywall Com", "Metal Stud/Framing"],
+			},
+			{
+			"contractor": "ANNING - JOHNSON COMPANY",
+			"address": "4701 South Santa Fe Avenue, Vernon, ,",
+			"type": ["Drywall", " Drywall Com"],
 			},
 			{
 			"contractor": "BAYLEY CONSTRUCTION",
 			"address": "8500 Beverly Boulevard, Los Angeles, CA, 90048",
-			"type": ["Commercial - Concrete"]
-			}
+			"type": ["Commercial - Concrete"],
+			},
+			{
+			"contractor": "CHURCH & LARSEN INC",
+			"address": "16103 Avenida Padilla, Irwindale, CA, 91702",
+			"type": ["Commercial - Concrete", " Commercial - Lathe", " Drywall", " Drywall Com", "Lath/Plaster/EIFS"],
+			},
+			{
+			"contractor": "GONSALVES & SANTUCCI INC dba CONCO",
+			"address": "590 South Fair Oaks Avenue, Pasadena, CA, 91105",
+			"type": ["Commercial - Concrete"],
+			},
+			{
+			"contractor": "GONSALVES & SANTUCCI INC dba CONCO",
+			"address": "510 West 6th Street, Los Angeles, CA, 90014",
+			"type": ["Commercial - Concrete", " Concrete - Horizontal Decks", " Concrete - VerticalConcrete", " General Contractor"],
+			},
 		]
 			
 		var map;
