peon and checkbox fixes

--- a/readytowork/readytowork.html
+++ b/readytowork/readytowork.html
@@ -151,6 +151,8 @@
 		    });
 		}
 		
+		window.addEventListener('load', generateCheckboxes);
+		
 		// Function to toggle markers based on selected tags
 		function toggleMarkers(tag) {
 		    // Toggle visibility of markers based on selected tag
