--- a/readytowork/readytowork.html
+++ b/readytowork/readytowork.html
@@ -120,7 +120,7 @@
 		function generateCheckboxes() {
 		    // Get all unique types of work from the JSON data
 		    var allTypes = [];
-		    mapData.forEach(function(entry) {
+		    mapdata.forEach(function(entry) {
 		        entry.type.forEach(function(workType) {
 		            if (!allTypes.includes(workType)) {
 		                allTypes.push(workType);
