--- a/readytowork/readytowork.html
+++ b/readytowork/readytowork.html
@@ -3,10 +3,32 @@
 <head>
     <title>jobsites</title>
     <style>
+	
+		@import url('https://fonts.googleapis.com/css2?family=Noto+Serif&display=swap');
+		
+		body {
+		  	font-size: 14px;
+		  	font-family: "Noto Serif";
+		  	color: #e3e3e3;
+		  	background-color: #212121;
+		}
         #map {
             height: 400px;
-            width: 100%;
+            width: 80%;
+			margin: 40px auto;
         }
+		#tags {
+			margin:20px;
+		}
+	    input[type="checkbox"] {
+	      width: 20px;
+	      height: 20px;
+		  margin-right:6px;
+		  vertical-align: middle;
+	    }
+		label{
+			margin-left:16px;
+		}
     </style>
 </head>
 <body>
@@ -127,8 +149,6 @@
 		            }
 		        });
 		    });
-			
-			console.log(allTypes);
 
 		    // Generate checkboxes for each type of work
 		    var checkboxesContainer = document.getElementById('tags');
