trying to make checkbox toggle work

--- a/readytowork/readytowork.html
+++ b/readytowork/readytowork.html
@@ -420,6 +420,8 @@
 		        var marker = markerData.marker;
 		        var infowindow = markerData.infowindow;
 		        var isVisible = false;
+				
+				console.log(marker);
         
 		        // Check if the marker matches the selected work type
 		        if (marker.workType.includes(workType)) {
