--- a/readytowork/readytowork.html
+++ b/readytowork/readytowork.html
@@ -423,6 +423,8 @@
 		        var marker = markerData.marker;
 		        var infowindow = markerData.infowindow;
 		        var isVisible = false;
+				
+				console.log(marker.type);
         
 		        // Check if the marker's type array contains the selected work type
 		        if (marker.type.includes(workType)) {
