--- a/readytowork/readytowork.html
+++ b/readytowork/readytowork.html
@@ -343,11 +343,13 @@
 				}, function(results, status) {
 					if (status === 'OK') {
 						var location = results[0].geometry.location;
+						
+						console.log(entry.type);
+						
 						var marker = new google.maps.Marker({
 							position: location,
 							map: map,
 							title: entry.contractor
-							type: entry.type // Store types array for the marker
 						});
 
 						// Construct content for the popup including contractor, address, and types of work
