fixed silly problems

--- a/readytowork/readytowork.html
+++ b/readytowork/readytowork.html
@@ -49,17 +49,17 @@
 			{
 			"contractor": "ABDELLATIF ENTERPRISES, INC.",
 			"address": "316 North Juanita Avenue, Los Angeles, ,",
-			"type": ["Framing Residential", " Wood Framing"],
+			"type": ["Framing Residential", "Wood Framing"],
 			},
 			{
 			"contractor": "ANNING - JOHNSON COMPANY",
 			"address": "3625 South Grand Avenue, Los Angeles, CA, 90007",
-			"type": ["Dry Fin Com", " Drywall", " Drywall Com", "Metal Stud/Framing"],
+			"type": ["Dry Fin Com", "Drywall", "Drywall Com", "Metal Stud/Framing"],
 			},
 			{
 			"contractor": "ANNING - JOHNSON COMPANY",
 			"address": "4701 South Santa Fe Avenue, Vernon, ,",
-			"type": ["Drywall", " Drywall Com"],
+			"type": ["Drywall", "Drywall Com"],
 			},
 			{
 			"contractor": "BAYLEY CONSTRUCTION",
@@ -69,7 +69,7 @@
 			{
 			"contractor": "CHURCH & LARSEN INC",
 			"address": "16103 Avenida Padilla, Irwindale, CA, 91702",
-			"type": ["Commercial - Concrete", " Commercial - Lathe", " Drywall", " Drywall Com", "Lath/Plaster/EIFS"],
+			"type": ["Commercial - Concrete", "Commercial - Lathe", "Drywall", "Drywall Com", "Lath/Plaster/EIFS"],
 			},
 			{
 			"contractor": "GONSALVES & SANTUCCI INC dba CONCO",
@@ -79,12 +79,12 @@
 			{
 			"contractor": "GONSALVES & SANTUCCI INC dba CONCO",
 			"address": "510 West 6th Street, Los Angeles, CA, 90014",
-			"type": ["Commercial - Concrete", " Concrete - Horizontal Decks", " Concrete - VerticalConcrete", " General Contractor"],
+			"type": ["Commercial - Concrete", "Concrete - Horizontal Decks", "Concrete - VerticalConcrete", "General Contractor"],
 			},
 			{
 			"contractor": "JHN INC dba COUSTIC- GLO",
 			"address": "4811 Elizabeth Street, Cudahy, CA, 90201",
-			"type": ["Acoustical", " Commercial - Acoustical"],
+			"type": ["Acoustical", "Commercial - Acoustical"],
 			},
 			{
 			"contractor": "GRANI INSTALLATION INC",
@@ -94,17 +94,17 @@
 			{
 			"contractor": "HERZOG CONTRACTING CORP",
 			"address": "553 North San Fernando Road, Los Angeles, CA, 90065",
-			"type": ["Commercial - Concrete", " General Contractor", " Heavy-Highway-Bridge", " Other"],
+			"type": ["Commercial - Concrete", "General Contractor", "Heavy-Highway-Bridge", "Other"],
 			},
 			{
 			"contractor": "KEENAN HOPKINS SUDER & STOWELL",
 			"address": "3800 South Vermont Avenue, Los Angeles, CA, 90037",
-			"type": ["Drywall", " Drywall Com", " Precast Concrete"],
+			"type": ["Drywall", "Drywall Com", "Precast Concrete"],
 			},
 			{
 			"contractor": "KEENAN HOPKINS SUDER & STOWELL CONTRACTORS INC DBA (KHS&S)",
 			"address": "555 Crocker Street, Los Angeles, CA, 90013",
-			"type": ["Commercial - Concrete", " Drywall", " Drywall Com", " Other"],
+			"type": ["Commercial - Concrete", "Drywall", "Drywall Com", "Other"],
 			},
 			{
 			"contractor": "W S KLEM CONTRACTOR INCORPORATED",
@@ -129,7 +129,7 @@
 			{
 			"contractor": "CHARLES PANKOW BUILDERS LTD",
 			"address": "600 San Pedro Street, Los Angeles, ,",
-			"type": ["Commercial - Concrete", " General Contractor"],
+			"type": ["Commercial - Concrete", "General Contractor"],
 			},
 			{
 			"contractor": "PAUL C MILLER CONSTRUCTION CO INC dba MILLER CONSTRUCTION",
@@ -139,7 +139,7 @@
 			{
 			"contractor": "EXCEL CONTRACTORS INC DBA PROGRESSION DRYWALL CORP",
 			"address": "11730 Ramona Boulevard, El Monte, CA, 91732",
-			"type": ["Drywall", " Residential - Drywall"],
+			"type": ["Drywall", "Residential - Drywall"],
 			},
 			{
 			"contractor": "EXCEL CONTRACTORS INC DBA PROGRESSION DRYWALL CORP",
@@ -149,12 +149,12 @@
 			{
 			"contractor": "QUALITY PRODUCTION SERVICES INC DBA QPS",
 			"address": "316 North Juanita Avenue, Los Angeles, ,",
-			"type": ["Drywall", " Metal Stud/Framing"],
+			"type": ["Drywall", "Metal Stud/Framing"],
 			},
 			{
 			"contractor": "QUALITY PRODUCTION SERVICES INC DBA QPS",
 			"address": "1900 Avenue of the Stars, Los Angeles, CA, 90067",
-			"type": ["Commercial - Framing", " Drywall Com"],
+			"type": ["Commercial - Framing", "Drywall Com"],
 			},
 			{
 			"contractor": "QUALITY PRODUCTION SERVICES INC DBA QPS",
@@ -169,7 +169,7 @@
 			{
 			"contractor": "San-Mar Construction Co Inc",
 			"address": "355 South Ogden Dr., Los Angeles, CA, 90036",
-			"type": ["Commercial - Concrete", " General Contractor"],
+			"type": ["Commercial - Concrete", "General Contractor"],
 			},
 			{
 			"contractor": "SHARPE INTERIOR SYSTEMS INC",
@@ -184,7 +184,7 @@
 			{
 			"contractor": "Standard Drywall Inc",
 			"address": "601 Pico Boulevard, Santa Monica, CA, 90405",
-			"type": ["Drywall", " Drywall Com"],
+			"type": ["Drywall", "Drywall Com"],
 			},
 			{
 			"contractor": "Standard Drywall Inc",
@@ -194,7 +194,7 @@
 			{
 			"contractor": "Swinerton Builders",
 			"address": "9908 South Santa Monica Boulevard, Beverly Hills, ,",
-			"type": ["Commercial - Cabinets", " Commercial - Concrete", " Drywall", " Drywall Com", " General Contractor", " Metal Framing", "Residential - Drywall"],
+			"type": ["Commercial - Cabinets", "Commercial - Concrete", "Drywall", "Drywall Com", "General Contractor", "Metal Framing", "Residential - Drywall"],
 			},
 			{
 			"contractor": "TARLTON AND SON INC",
@@ -214,7 +214,7 @@
 			{
 			"contractor": "INLINE DRYWALL (CALIFORNIA) INC",
 			"address": "1002 South Hill Street, Los Angeles, ,",
-			"type": ["Drywall", " Drywall Com"],
+			"type": ["Drywall", "Drywall Com"],
 			},
 			{
 			"contractor": "INLINE DRYWALL (CALIFORNIA) INC",
@@ -234,7 +234,7 @@
 			{
 			"contractor": "NOVA DRYWALL SYSTEMS INC DBA NOVA SYSTEMS",
 			"address": "525 South Santa Fe Ave., Los Angeles, CA, 90013",
-			"type": ["Commercial - Concrete", " Drywall", " Drywall Com", " Residential - Drywall"],
+			"type": ["Commercial - Concrete", "Drywall", "Drywall Com", "Residential - Drywall"],
 			},
 			{
 			"contractor": "CML RW SECURITY DBA ROTONDO WEIRICH ENTERPRISES INC",
@@ -249,7 +249,7 @@
 			{
 			"contractor": "SKANSKA - TRAYLOR - SHEA A JOINT VENTURE",
 			"address": "711 South La Brea Avenue, Los Angeles, CA, 90036",
-			"type": ["Commercial - Concrete", " Concrete - Horizontal Decks", " Concrete - Residential"],
+			"type": ["Commercial - Concrete", "Concrete - Horizontal Decks", "Concrete - Residential"],
 			},
 			{
 			"contractor": "ELLIOTT / DRINKWARD CONSTRUCTION INC DBA ELLIOTT DRINKWARD CONSTRUCTION INC",
@@ -259,7 +259,7 @@
 			{
 			"contractor": "ELLIOTT / DRINKWARD CONSTRUCTION INC DBA ELLIOTT DRINKWARD CONSTRUCTION INC",
 			"address": "4020 Compton Avenue, Los Angeles, CA, 90011",
-			"type": ["Commercial - Concrete", " Concrete - Residential", " Wood Framing"],
+			"type": ["Commercial - Concrete", "Concrete - Residential", "Wood Framing"],
 			},
 			{
 			"contractor": "ELLIOTT / DRINKWARD CONSTRUCTION INC DBA ELLIOTT DRINKWARD CONSTRUCTION INC",
@@ -274,7 +274,7 @@
 			{
 			"contractor": "ELLIOTT / DRINKWARD CONSTRUCTION INC DBA ELLIOTT DRINKWARD CONSTRUCTION INC",
 			"address": "707 North Alvarado Street, Los Angeles, CA, 90026",
-			"type": ["Framing Residential", " Wood Framing"],
+			"type": ["Framing Residential", "Wood Framing"],
 			},
 			{
 			"contractor": "ELLIOTT / DRINKWARD CONSTRUCTION INC DBA ELLIOTT",
@@ -284,7 +284,7 @@
 			{
 			"contractor": "Hensel Phelps Construction Company",
 			"address": "312 North Record Avenue, Los Angeles, ,",
-			"type": ["Commercial - Concrete", " GeneralContractor"],
+			"type": ["Commercial - Concrete", "General Contractor"],
 			},
 			{
 			"contractor": "M K H Inc. dba Ritmo",
@@ -294,32 +294,32 @@
 			{
 			"contractor": "Jordan Drywall Inc",
 			"address": "530 South Olive Street, Los Angeles, ,",
-			"type": ["Drywall Com", " Metal Stud/Framing"],
+			"type": ["Drywall Com", "Metal Stud/Framing"],
 			},
 			{
 			"contractor": "TPOGJV/Tutor Perini",
 			"address": "2040 Century Park East, Los Angeles, CA, 90067",
-			"type": ["Commercial - Concrete", " General Contractor", " Heavy-Highway-Bridge"],
+			"type": ["Commercial - Concrete", "General Contractor", "Heavy-Highway-Bridge"],
 			},
 			{
 			"contractor": "TPOGJV/Tutor Perini",
 			"address": "1801 Century Park East, Los Angeles, CA, 90067",
-			"type": ["Commercial - Concrete", " Drywall"],
+			"type": ["Commercial - Concrete", "Drywall"],
 			},
 			{
 			"contractor": "WEBCOR CRAFT L P",
-			"address": "230 W Olympic Blvd, Los Angeles, CA,90015",
+			"address": "230 W Olympic Blvd, Los Angeles, CA, 90015",
 			"type": ["Commercial - Concrete"],
 			},
 			{
 			"contractor": "Fixed Dimensions dba Fixed Dimensions Carpentry",
 			"address": "200 Mesnagers Street, Los Angeles, CA, 90012",
-			"type": ["Cabinet Installation", " Commercial - Concrete"],
+			"type": ["Cabinet Installation", "Commercial - Concrete"],
 			},
 			{
 			"contractor": "E & L Gonzalez Engineering Corp.",
 			"address": "1985 South Del Mar Avenue, San Gabriel, ,",
-			"type": ["Commercial - Concrete", " GC Bidding"],
+			"type": ["Commercial - Concrete", "GC Bidding"],
 			}
 		]
 			
@@ -385,33 +385,37 @@
 		}
 		
 		function generateCheckboxes() {
-		    // Get all unique types of work from the JSON data
-		    var allTypes = [];
-		    mapdata.forEach(function(entry) {
-		        entry.type.forEach(function(workType) {
-		            if (!allTypes.includes(workType)) {
-		                allTypes.push(workType);
-		            }
-		        });
-		    });
+			var uniqueTypes = new Set();
 
-		    // Generate checkboxes for each type of work
-		    var checkboxesContainer = document.getElementById('tags');
-		    allTypes.forEach(function(workType) {
-		        var checkbox = document.createElement('input');
-		        checkbox.type = 'checkbox';
-		        checkbox.value = workType;
-				checkbox.checked = true;
-		        checkbox.id = 'checkbox_' + workType.replace(/\s/g, '_'); // Replace spaces with underscores for IDs
-		        var label = document.createElement('label');
-		        label.appendChild(checkbox);
-		        label.appendChild(document.createTextNode(workType));
-		        checkboxesContainer.appendChild(label);
-				
-				checkbox.addEventListener('change', function() {
-					toggleMarkers(this.value);
-				});
-		    });
+			    // Loop through each job site entry in the JSON data
+			    mapdata.forEach(function(entry) {
+			        entry.type.forEach(function(workType) {
+			            uniqueTypes.add(workType); // Add each type of work to the Set
+			        });
+			    });
+
+			    // Convert the Set to an array
+			    var allTypes = Array.from(uniqueTypes);
+
+			    // Generate checkboxes for each type of work
+			    var checkboxesContainer = document.getElementById('tags');
+			    allTypes.forEach(function(workType) {
+					console.log(workType);
+			        var checkbox = document.createElement('input');
+			        checkbox.type = 'checkbox';
+			        checkbox.value = workType;
+			        checkbox.checked = true; // Checked by default
+			        checkbox.id = 'checkbox_' + workType.replace(/\s/g, '_'); // Replace spaces with underscores for IDs
+			        var label = document.createElement('label');
+			        label.appendChild(checkbox);
+			        label.appendChild(document.createTextNode(workType));
+			        checkboxesContainer.appendChild(label);
+        
+			        // Add event listener to checkboxes to toggle markers
+			        checkbox.addEventListener('change', function() {
+			            toggleMarkers();
+			        });
+			    });
 		}
 		
 		window.addEventListener('load', generateCheckboxes);
