--- a/readytowork/readytowork.html
+++ b/readytowork/readytowork.html
@@ -46,6 +46,10 @@
 	      background-color: #d3b690;
 	      color: #212121;
 	    }
+		
+		#play {
+		    cursor: pointer;
+		}
     </style>
 </head>
 <body>
