--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
 </head>
 <body>
 	
-	sfd's websites
+	<div>sfd's websites</div>
 	
-	🔧🗜️🪛 <a href="flashcards/testing.html">tool recognition flashcards</a>
-	🪵🪚 <a href="readytowork/readytowork.html">los angeles union carpenters ready to work list</a>
+	<div>🔧🗜️🪛 <a href="flashcards/testing.html">tool recognition flashcards</a></div>
+	<div>🪵🪚 <a href="readytowork/readytowork.html">los angeles union carpenters ready to work list</a></div>
 	
-	🧵 <a href="sample twine game.html">sample twine game</a>
-	🐕 <a href="mickeygame/mickeyz.html">mickey game</a>
+	<div>🧵 <a href="sample twine game.html">sample twine game</a></div>
+	<div>🐕 <a href="mickeygame/mickeyz.html">mickey game</a></div>
 	
-	🎶 <a href="jmix/index.html">jmix</a>
+	<div>🎶 <a href="jmix/index.html">jmix</a></div>
 	
 </body>
 </html>
